# MyLogic-EDA-Tool

./: .env.example  .gitattributes  .gitignore  BUF_NODE_EXPLANATION.md  BUGS_AND_IMPROVEMENTS.md  CLEANUP_SUMMARY.md  DANH_GIA_DU_AN.md  DCE_FIX_SUMMARY.md  DCE_FIX_V2.md  FILES_TO_DELETE_ANALYSIS.md  FINAL_PROJECT_SUMMARY.md  FULL_ADDER_ISSUE_ANALYSIS.md  GITHUB_PULL_GUIDE.md  GITHUB_PUSH_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PROJECT_STRUCTURE_FINAL.md  README.md  README_TESTS.md  REDUNDANCY_TEST_REPORT.md  REFACTORING_SUMMARY.md  TEST_README.md  TOOLS_PROFESSIONAL_SUMMARY.md  arithmetic_netlist.json  combinational_gates_opt.v  combinational_gates_syn.v  compare_formats.py  constants.py  convert_to_yosys_format.py  create_svg_from_json.py  cursor.md  dual_file_test_report.md  examples_analysis_report.md  lo-trinh-agentic.md  my_custom_netlist.json  mylogic.py  mylogic_config.json  parser_fixes_report.md  push_to_github.py  pyproject.toml  (+14 more)
.github/workflows/: ci.yml  tests.yml
TESTBENCH/01_combinational_gates_tb/: run_01_combinational_gates_compare.do  tb_01_combinational_gates_compare.v
TESTBENCH/02_complex_expressions/: tb_02_complex_expressions.v
TESTBENCH/03_always_combinational/: tb_03_always_combinational.v
backends/: README.md  __init__.py  dot_generator.py  json_generator.py  verilog_generator.py
benchmarks/: README.md
cli/: __init__.py  mylogic_shell.py  readme.md  vector_shell.py
cli/commands/: __init__.py  dump_ast.py  dump_synth.py  file_ops.py  help_cmd.py  inspect.py  synthesis_cmds.py
core/: __init__.py  abc_integration.py  complete_flow.py  verification.py
core/export/: __init__.py  verilog_writer.py
core/optimization/: README.md  balance.py  constprop.py  cse.py  dce.py  optimization_flow.py  quine_mccluskey.py
core/simulation/: README.md  __init__.py  arithmetic_simulation.py  logic_simulation.py  timing_simulation.py
core/synthesis/: README.md  aig.py  aig_multibit.py  netlist_to_aig.py  strash.py  synthesis_flow.py
demo/: README.md  SUMMARY.md  test_demo.py
docs/: 02_theoretical_foundation.md  ADDING_COLLABORATOR.md  BRANCH_PERMISSIONS_CHECK.md  BROKEN_FILES_REPORT.md  CHAPTER_4_IMPLEMENTATION_DETAILS.md  CHAPTER_4_SUMMARY.md  COMMAND_QUICK_REFERENCE.md  COMMAND_REFERENCE.md  COMPLETE_DOCUMENTATION.md  EVALUATION_AND_GUIDE.md  FIXES_APPLIED.md  GIT_WORKFLOW.md  INDEX.md  INTEGRATIONS_ANALYSIS.md  LIBRARY_LOADING_SOLUTION.md  MATHEMATICAL_PROOFS.md  NEW_FEATURES.md  ONBOARDING_FOR_MINH.md  QUICKSTART.md  QUICK_START_GIT.md  README.md  REFERENCES.md  STANDARD_CELLS_LOCATION.md  SYNTHESIS_GUIDE.md  TEAM_ROLES_AND_PERMISSIONS.md  TECHNOLOGY_MAPPING_FLOW.md  TECHNOLOGY_MAPPING_LIBRARY_LOADING.md  TECHNOLOGY_MAPPING_SUMMARY.md  THEORY_SUMMARY.md  VERILOG_PROCESSING_FLOW.md  installation_guide.md  project_structure_guide.md  report_outline.md  simulation_overview.md  verilog_syntax_reference.md
examples/: 4bit_adder.v  4bit_multiplier.v  README.md  advanced_arithmetic.v  advanced_design.v  arithmetic_operations.v  bad_syntax.v  bitwise_operations.v  complex_arithmetic.v  complex_combinational.v  comprehensive_combinational.v  comprehensive_test.v  dead_code_test.v  expected_output.json  flipflop.v  full_adder.v  full_feature_test.v  instantiation_only.v  module_hierarchy_example.v  module_instantiation_examples.v  priority_encoder.v  priority_encoder_netlist.json  priority_encoder_yosys.json  priority_encoder_yosys_fixed.json  re_demo.py  redundant_logic.v  run_all_tests.py  run_example.ps1  run_example.sh  sequential_counter.v  simple_combinational.v  simple_module_example.v  simple_module_instantiation.v  simple_multiplier.v  test_complex_expressions.v  test_nested_not.v  test_simple_not.v  yosys_read_example.ys
frontends/: README.md  REFACTORING_SUMMARY.md  __init__.py  enhanced_verilog.py  pyverilog.py  simple_arithmetic_verilog.py  unified_verilog.py  verilog.py
integrations/: __init__.py  modelsim_integration.py
outputs/: 01_combinational_gates_mapped.json  01_combinational_gates_mapped.v  01_combinational_gates_opt.json  01_combinational_gates_parsed.json  01_combinational_gates_syn.json  01_combinational_gates_syn.v  02_complex_expressions_parsed.json
parsers/: __init__.py
reports/: README.md  full_adder_synthesis_report.md
scripts/: Mylogic.code-workspace  check_branches.ps1  clean_transcript.py  cleanup_root.sh  demo_flow.sh  git_helper.ps1  git_helper.sh  run_all_tests_transcript.py  run_tests.sh
techlibs/: INDEX.md  README.md  REORGANIZATION_SUMMARY.md  YOSYS_INTEGRATION_SUMMARY.md  custom_library.lib  custom_lut_library.json  library_loader.py  lut_library.json  standard_cells.lib  standard_cells.v  test_library.json  test_library_cells.v
tests/: README.md  __init__.py  conftest.py  run_all_tests.py  run_tests.py  test_arithmetic_simulation.py  test_ast_frontend_basic.py  test_balance.py  test_cli.py  test_config.json  test_cse.py  test_dce.py  test_edge_cases_combinational.py  test_examples.py  test_naming_collision_export.py  test_performance.py  test_simulation.py  test_strict_mode_parser.py  test_syntax_error_catchall.py  test_synthesis_flow.py  test_technology_mapping.py  test_verilog_export.py  test_verilog_parser.py  test_vlsi_cad.py
tools/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  ORGANIZATION_SUMMARY.md  PROFESSIONAL_STRUCTURE.md  README.md  __init__.py  batch_check_examples.py  create_tb_for_testbench_synth.py  dump_ast.py  generate_batch_synth_testbenches.py  inspect_arith_netlist.py  pyproject.toml  requirements.txt  run_can_do_synth_to_testbench.py  setup.py  show_professional_structure.py  test_all_components.py  test_complete_flow.py
tools/analyzers/: README.md  __init__.py  cell_types_summary.py  demo_mylogic_visualization.py  explain_cell_types.py  show_yosys_structure.py
tools/converters/: README.md  __init__.py
tools/utilities/: README.md  __init__.py  compare_svg_versions.py  simple_test.py  test_netlistsvg_compatibility.py  view_svg_details.py
tools/visualizers/: README.md  __init__.py  create_all_svgs.py  create_demo_svg.py
(+257 files in other folders)
